scripts/nullaway/annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8.txt
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1801: error: [NullAway] @NonNull static field internal_static_TrieNodePB_fieldAccessorTable not initialized
      internal_static_TrieNodePB_fieldAccessorTable;
      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1806: error: [NullAway] @NonNull static field internal_static_TriePB_fieldAccessorTable not initialized
      internal_static_TriePB_fieldAccessorTable;
      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:115: error: [NullAway] initializer method does not guarantee @NonNull fields children_ (line 259), referenceList_ (line 351) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private TrieNodePB(com.google.protobuf.GeneratedMessage.Builder<?> builder) {
            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:119: error: [NullAway] initializer method does not guarantee @NonNull fields children_ (line 259), referenceList_ (line 351) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private TrieNodePB(boolean noInit) { this.unknownFields = com.google.protobuf.UnknownFieldSet.getDefaultInstance(); }
            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1050: error: [NullAway] assigning @Nullable expression to @NonNull field
          children_ = null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1298: error: [NullAway] initializer method does not guarantee @NonNull field root_ (line 1397) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private TriePB(com.google.protobuf.GeneratedMessage.Builder<?> builder) {
            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1302: error: [NullAway] initializer method does not guarantee @NonNull field root_ (line 1397) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private TriePB(boolean noInit) { this.unknownFields = com.google.protobuf.UnknownFieldSet.getDefaultInstance(); }
            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1781: error: [NullAway] assigning @Nullable expression to @NonNull field
          root_ = null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieProto.java:1830: error: [NullAway] dereferenced expression getDescriptor() is @Nullable
            getDescriptor().getMessageTypes().get(0);
                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/QueryServer.java:77: error: [NullAway] dereferenced expression each_ref.getReference() is @Nullable
					if(each_ref.getReference().isWord()){						
					                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/Trie.java:77: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	   if(prefix == null) return null;
	                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/Entry.java:28: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return word;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieNode.java:195: error: [NullAway] dereferenced expression children[childPos].referenceList is @Nullable
				children[childPos].referenceList.add(new Reference(referer, ref_string));
				                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieDS/TrieNode.java:212: error: [NullAway] passing @Nullable parameter 'referenceList' where @NonNull is required
			the_list.add(new WordValueStore(toString(new StringBuilder()), value, referenceList));
			                                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/indexing/TrieGenerator.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Trie the_trie = null;
	             ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:81: error: [NullAway] dereferenced expression md is @Nullable
		md.reset();
		  ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:116: error: [NullAway] dereferenced expression br is @Nullable
			the_line = br.readLine();
			             ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:140: error: [NullAway] dereferenced expression br is @Nullable
				the_line = br.readLine();
				             ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:145: error: [NullAway] dereferenced expression br is @Nullable
		br.close();
		  ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:430: error: [NullAway] dereferenced expression COLLISION_PROCESS_SIZE.get(max_string_size) is @Nullable
		int cps = COLLISION_PROCESS_SIZE.get(max_string_size).intValue();
		                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:430: error: [NullAway] dereferenced expression COLLISION_PROCESS_SIZE is @Nullable
		int cps = COLLISION_PROCESS_SIZE.get(max_string_size).intValue();
		                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:479: error: [NullAway] dereferenced expression COLLISION_PROCESS_SIZE.get(new Integer(max_string_size)) is @Nullable
			int rounds = num_collisions/COLLISION_PROCESS_SIZE.get(new Integer(max_string_size)).intValue() + 1;
			                                                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlfc1c29991b_nil_mish_InJava_tgz-pJ8-edu_usc_cs_nsl_indexing_test_TestTrieProtoJ8/src/edu/usc/cs/nsl/counting/CountingUtil.java:480: error: [NullAway] dereferenced expression COLLISION_PROCESS_SIZE.get(new Integer(max_string_size)) is @Nullable
			int new_num_collisions = COLLISION_PROCESS_SIZE.get(new Integer(max_string_size)).intValue();
			                                                                                 ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
23 errors
